5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4029/executions/1643_2703.log
== TEST (2019-04-03 19:36:31) 
-- CODE:
x= int(input("Qual sua idade? "))
if (x > 18):
	msg= eleitor
else:
	msg= nao_eleitor
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    msg= nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:37:01) 
-- CODE:
x= int(input("Qual sua idade? "))
if (x > 18):
	msg= "eleitor"
else:
	msg= "nao_eleitor"
print(msg)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:37:06) 
-- CODE:
x= int(input("Qual sua idade? "))
if (x > 18):
	msg= "eleitor"
else:
	msg= "nao_eleitor"
print(msg)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 19:37:13) 
-- CODE:
x= int(input("Qual sua idade? "))
if (x > 18):
	msg= "eleitor"
else:
	msg= "nao_eleitor"
print(msg)
-- EXECUTION TIME:
0.184564
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:51:58) 
-- CODE:
x= int(input("Qual sua idade? "))
if (x > 18):
	msg= "eleitor"
else:
	msg= "nao_eleitor"
print(msg)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:52:25) 
-- CODE:
x= int(input("Qual sua idade? "))
if (x >= 18):
	msg= "eleitor"
else:
	msg= "nao_eleitor"
print(msg)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
